# chessEngineTest

./: CLAUDE.md  CMakeLists.txt  compete.sh  match_results.pgn  run_match.py
build-release/: CMakeCache.txt  Makefile  bench  cmake_install.cmake  hyperchess  perft
docs/: engine_roadmap.md  gui_setup.md  next_steps.md  search_core_design.md
include/chess/: bitboard.hpp  eval_state.hpp  evaluation.hpp  move.hpp  position.hpp  search.hpp  transposition_table.hpp  types.hpp  uci.hpp
src/: bench.cpp  bitboard.cpp  evaluation.cpp  main.cpp  move.cpp  perft.cpp  position.cpp  search.cpp  transposition_table.cpp  uci.cpp
